; ModuleID = '/home/carl/AnghaBench/reactos/win32ss/user/user32/controls/extr_ghost.c_Ghost_OnDraw.c'
source_filename = "/home/carl/AnghaBench/reactos/win32ss/user/user32/controls/extr_ghost.c_Ghost_OnDraw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32 }
%struct.TYPE_5__ = type { i32 }

@SRCCOPY = common dso_local global i32 0, align 4
@CAPTUREBLT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i64)* @Ghost_OnDraw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Ghost_OnDraw(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_6__, align 4
  %6 = alloca i64, align 8
  %7 = alloca %struct.TYPE_5__*, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i64 %1, i64* %4, align 8
  %9 = load i32, i32* %3, align 4
  %10 = call %struct.TYPE_5__* @Ghost_GetData(i32 %9)
  store %struct.TYPE_5__* %10, %struct.TYPE_5__** %7, align 8
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %12 = icmp ne %struct.TYPE_5__* %11, null
  br i1 %12, label %13, label %19

13:                                               ; preds = %2
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @GetObject(i32 %16, i32 8, %struct.TYPE_6__* %5)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %20, label %19

19:                                               ; preds = %13, %2
  br label %46

20:                                               ; preds = %13
  %21 = load i64, i64* %4, align 8
  %22 = call i64 @CreateCompatibleDC(i64 %21)
  store i64 %22, i64* %6, align 8
  %23 = load i64, i64* %6, align 8
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %46

25:                                               ; preds = %20
  %26 = load i64, i64* %6, align 8
  %27 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @SelectObject(i64 %26, i32 %29)
  store i32 %30, i32* %8, align 4
  %31 = load i64, i64* %4, align 8
  %32 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = load i64, i64* %6, align 8
  %37 = load i32, i32* @SRCCOPY, align 4
  %38 = load i32, i32* @CAPTUREBLT, align 4
  %39 = or i32 %37, %38
  %40 = call i32 @BitBlt(i64 %31, i32 0, i32 0, i32 %33, i32 %35, i64 %36, i32 0, i32 0, i32 %39)
  %41 = load i64, i64* %6, align 8
  %42 = load i32, i32* %8, align 4
  %43 = call i32 @SelectObject(i64 %41, i32 %42)
  %44 = load i64, i64* %6, align 8
  %45 = call i32 @DeleteDC(i64 %44)
  br label %46

46:                                               ; preds = %19, %25, %20
  ret void
}

declare dso_local %struct.TYPE_5__* @Ghost_GetData(i32) #1

declare dso_local i32 @GetObject(i32, i32, %struct.TYPE_6__*) #1

declare dso_local i64 @CreateCompatibleDC(i64) #1

declare dso_local i32 @SelectObject(i64, i32) #1

declare dso_local i32 @BitBlt(i64, i32, i32, i32, i32, i64, i32, i32, i32) #1

declare dso_local i32 @DeleteDC(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
